TestSuite/PascalABCTests/errors/err0256.pas
type
  t1 = class 
    
    constructor := exit;
    
    procedure p1(a: array of array of record end) := exit;
    
  end;

begin end.